@@ -1,30 +1,31 @@
 package com.example.bumacat.global.security.auth;
 
+import com.example.bumacat.domain.user.model.User;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
+@RequiredArgsConstructor
 public class AuthDetails implements UserDetails {
+  private final User user;
 
   @Override
   public Collection<? extends GrantedAuthority> getAuthorities() {
-    return List.of();
+    return Collections.singletonList(new SimpleGrantedAuthority(user.getRole().toString()));
   }
 
   @Override
   public String getPassword() {
-    return "";
+    return user.getPassword();
   }
 
   @Override
   public String getUsername() {
-    return "";
+    return user.getEmail();
   }
 
-  public Long getUserId() {
-    return null
-            ;
-  }
 }
